--- a/src/App.css
+++ b/src/App.css
@@ -42,13 +42,27 @@ table {
 	border-spacing: 0;
 }
 
+body::-webkit-scrollbar {
+	width: 0.1em;
+  }
+   
+  body::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
+   
+  body::-webkit-scrollbar-thumb {
+	background-color: darkgrey;
+	outline: 1px solid slategrey;
+  }
+
 body {
 	line-height: 1;
 	font-family: 'Poppins', sans-serif;
-	background-color: #f9f9f9;
+	background-color: #fff;
 	color: rgb(10, 10, 10);
 	margin: 1rem 0.5rem;
 }
+
 
 .nav {
     align-items: center;
@@ -255,12 +269,6 @@ outline: none;
 
 
 
-.cards{
-	text-align: center;
-	display: grid;
-	justify-content:center;
-	margin-top: 1.5rem;
-}
 
 .cards-heading{
 	font-size: 1.3rem;
@@ -280,4 +288,39 @@ outline: none;
     font-size: 1.3rem;
     font-weight: 500;
     /* top: -25px; */
+}
+
+
+
+  
+  .cards-section{
+	justify-items: center;
+	display: grid;
+	gap: 2.1rem;
+	grid-template-columns: repeat(auto-fit, minMax(min(100%, 250px), 1fr) );
+  }
+
+
+  .card-container{
+	/* padding: 1rem; */
+	text-overflow: clip;
+	overflow: hidden;
+	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+	border-radius: 5px;
+	display: grid;
+	gap: 30px;
+	width: 300px;
+}
+
+img{
+	width: 100%;
+}
+
+.cards{
+	margin-top: 3rem;
+}
+
+.info-container{
+margin: 1rem;
+
 }
