--- a/src/App.css
+++ b/src/App.css
@@ -300,6 +300,16 @@ outline: none;
 	grid-template-columns: repeat(auto-fit, minMax(min(100%, 250px), 1fr) );
   }
 
+.show-card-container{
+	display: grid;
+	gap: 30px;
+	width: 300px;
+		padding: 1rem;
+		text-overflow: clip;
+		overflow: hidden;
+		box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+		border-radius: 5px;
+}
 
   .card-container{
 	/* padding: 1rem; */
@@ -307,7 +317,7 @@ outline: none;
 	overflow: hidden;
 	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 	border-radius: 5px;
-	display: grid;
+	display: none;
 	gap: 30px;
 	width: 300px;
 }
