--- a/src/App.css
+++ b/src/App.css
@@ -73,8 +73,8 @@ body {
 .nav-icon {
     position: absolute;
     left: 111px;
-    top: -20px;
-    width: 3rem;
+    top: -15px;
+    width: 2.6rem;
 }
 .nav-heading{
 	letter-spacing: 1.1px;
@@ -321,8 +321,13 @@ outline: none;
 	width: 300px;
 }
 
+.img-container{
+	display: grid;
+	justify-content: center;
+}
+
 img{
-	width: 100%;
+	width:200px;
 }
 
 .cards{
