--- a/src/App.css
+++ b/src/App.css
@@ -287,7 +287,6 @@ outline: none;
     position: absolute;
     font-size: 1.3rem;
     font-weight: 500;
-    /* top: -25px; */
 }
 
 
@@ -303,22 +302,16 @@ outline: none;
 .show-card-container{
 	display: grid;
 	width: 300px;
-		/* padding: 1rem; */
 		text-overflow: clip;
 		overflow: hidden;
 		box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 		border-radius: 5px;
 }
 
-  .card-container{
-	/* padding: 1rem; */
-	text-overflow: clip;
-	overflow: hidden;
-	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-	border-radius: 5px;
-	display: none;
+  .first-card-container{
+display: grid;
 	gap: 30px;
-	width: 300px;
+
 }
 
 .img-container{
@@ -331,12 +324,67 @@ img{
 }
 
 .cards{
-	margin-top: 3rem;
+	display: none;
 }
+
+.show-cards {
+    margin-top: 1.1rem;
+    display: grid;
+}
+
+
+.cards-info{
+	display:grid;
+	gap: 32px;
+	text-align: center;
+	color: #282a30;
+}
+
+.cards-info-2{
+	display:grid;
+	gap: 12px;
+	text-align: center;
+	color: #282a30;
+	/* margin-bottom: 2rem */
+}
+
 
 .info-container{
 margin: 1rem;
 display: grid;
-gap: 10px;
-text-align: left;
+gap: 100px;
+}
+
+
+.temp {
+    font-size: 5rem;
+	letter-spacing: 1.1px;
+    text-transform: capitalize;
+}
+
+.weth-condition{
+	font-size: 1.5rem;
+}
+
+.location-li {
+    justify-content: center;
+    display: flex;
+    align-items: center;
+}
+.location-li p{
+	text-decoration: underline;
+}
+
+.li-img{
+	margin-right: 0.7rem;
+	width: 30px;
+}
+
+@media (min-width:500px) {
+	.info-container{
+		margin: 1rem;
+		display: grid;
+		gap: 50px;
+		}
+		
 }
