--- a/src/App.css
+++ b/src/App.css
@@ -283,13 +283,7 @@ outline: none;
 
 
   
-  .cards-section{
-	justify-items: center;
-	display: grid;
-	gap: 2.1rem;
-	grid-template-columns: repeat(auto-fit, minMax(min(100%, 250px), 1fr) );
-  }
-
+ 
 .show-card-container{
 	display: grid;
 	width: 300px;
@@ -301,7 +295,7 @@ outline: none;
 
   .first-card-container{
 display: grid;
-	gap: 100px;
+	gap: 65px;
 
 }
 
@@ -313,6 +307,14 @@ display: grid;
 img{
 	width:200px;
 }
+
+.cards-section{
+	justify-items: center;
+	display: grid;
+	gap: 2.1rem;
+	grid-template-columns: repeat(auto-fit, minMax(min(100%, 250px), 1fr) );
+  }
+
 
 .cards{
 	display: none;
@@ -388,6 +390,10 @@ gap: 100px;
 		margin: 1rem;
 		display: grid;
 		gap: 50px;
+		}
+
+		.first-card-container {
+			gap: 8px;
 		}
 		
 }
