--- a/src/App.css
+++ b/src/App.css
@@ -304,7 +304,7 @@ display: grid;
 	justify-content: center;
 }
 
-img{
+.card-img{
 	width:200px;
 }
 
@@ -313,6 +313,7 @@ img{
 	display: grid;
 	gap: 2.1rem;
 	grid-template-columns: repeat(auto-fit, minMax(min(100%, 250px), 1fr) );
+	margin-top: 1.1rem;
   }
 
 
@@ -321,7 +322,6 @@ img{
 }
 
 .show-cards {
-    margin-top: 1.1rem;
     display: grid;
 }
 
@@ -383,6 +383,13 @@ gap: 100px;
 .li-img{
 	margin-right: 0.7rem;
 	width: 28px;
+}
+
+
+.foreCast-card{
+	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    padding: 1rem;
+    height: 200px;
 }
 
 @media (min-width:500px) {
