--- a/src/App.css
+++ b/src/App.css
@@ -317,6 +317,9 @@ display: grid;
   }
 
 
+
+
+
 .cards{
 	display: none;
 }
@@ -386,25 +389,26 @@ gap: 100px;
 }
 
 
-.foreCast-card{
-	display: grid;
-	gap: 1rem;
-	width: 250px;
-	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+.foreCast-card {
+    align-content: center;
+    display: grid;
+    /* gap: 1rem; */
+    /* width: 250px; */
+    box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
     padding: 1rem;
-    height: 240px;
+    height: 120px;
     /* color: gray; */
 }
 
 
 .foreCast-card  img{
-	width: 100px;
+	width: 70px;
 }
 
 
 .foreCast-card-heading__img{
 	display: grid;
-	justify-content: center;
+	justify-items: center;
 }
 
 .foreCast-card-list{
@@ -420,6 +424,12 @@ gap: 100px;
 	font-size: 1.2rem;
 	padding-bottom: 0.3rem;
 }
+
+.forecast-forecastday{
+margin-bottom: 2rem;
+  }
+
+
 @media (min-width:500px) {
 	.info-container{
 		margin: 1rem;
@@ -431,4 +441,22 @@ gap: 100px;
 			gap: 8px;
 		}
 		
+}
+
+@media (min-width:1024px) {
+	.input {
+		max-width: 350px;
+	}
+
+	.cards-section{
+		justify-items: center;
+		display: flex;
+		gap: 8rem;
+	  }
+
+	  .forecast-forecastday{
+		display: flex;
+		gap: 3rem;
+	  }
+
 }
