--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,7 @@ body {
 	line-height: 1;
 	font-family: 'Poppins', sans-serif;
 	background-color: #fff;
+	/* background-image: url('./images/animated-forest-park-s2siffpwqwzthugt.jfif'); */
 	color: rgb(10, 10, 10);
 	margin: 1rem 0.5rem;
 }
@@ -295,7 +296,7 @@ outline: none;
 
   .first-card-container{
 display: grid;
-	gap: 65px;
+	gap: 120px;
 
 }
 
@@ -326,6 +327,7 @@ display: grid;
 
 .show-cards {
     display: grid;
+	width: 300px;
 }
 
 
@@ -346,7 +348,7 @@ display: grid;
 
 
 .info-container{
-margin: 1rem;
+/* margin: 1rem; */
 display: grid;
 gap: 100px;
 }
@@ -392,12 +394,10 @@ gap: 100px;
 .foreCast-card {
     align-content: center;
     display: grid;
-    /* gap: 1rem; */
-    /* width: 250px; */
+    width: 200px;
     box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
     padding: 1rem;
-    height: 120px;
-    /* color: gray; */
+border-radius: 5px;
 }
 
 
@@ -425,20 +425,63 @@ gap: 100px;
 	padding-bottom: 0.3rem;
 }
 
-.forecast-forecastday{
-margin-bottom: 2rem;
+  .forecast-forecastday {
+    display: grid;
+    margin-bottom: 2rem;
+    gap: 2rem;
+}
+
+.show-today-highLight-container{
+	display: grid;
+    gap: 2rem;
+}
+
+.today-highLight-container{
+	display: none;
+    gap: 2rem;
+}
+
+.show-today-highLight-container h1{
+	font-size: 1.5rem;
+	font-weight: 500;
+	text-transform: capitalize;
+}
+
+  .today-highLight {
+	text-align: center;
+    width: 100%;
+    height: 100px;
+    box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
+    padding: 1rem;
+    border-radius: 5px;
+    display: grid;
+    justify-content: center;
+}
+
+  .today-highLight-flex-container{
+	display: grid;
+	gap: 2rem;
   }
 
+.today-highLight-para{
+	font-size: 3rem;
+	font-weight: 500;
+}
+
+.today-highLight-para span{
+	font-size: 2rem;
+	font-weight: 300;
+}
 
 @media (min-width:500px) {
 	.info-container{
-		margin: 1rem;
+		/* margin: 1rem; */
 		display: grid;
 		gap: 50px;
 		}
 
 		.first-card-container {
-			gap: 8px;
+			gap: 65px;
 		}
 		
 }
@@ -449,14 +492,36 @@ margin-bottom: 2rem;
 	}
 
 	.cards-section{
-		justify-items: center;
+		justify-content: space-between;
 		display: flex;
-		gap: 8rem;
+		/* gap: 8rem; */
+	  }
+
+
+	  .show-cards {
+		width: 350px;
 	  }
 
 	  .forecast-forecastday{
 		display: flex;
-		gap: 3rem;
+		gap: 1rem;
+	  }
+
+	  
+.forecast-HighLight {
+    width: 100%;
+    justify-content: center;
+    display: grid;
+}
+
+	  .today-highLight-flex-container{
+		display: flex;
+		gap: 2rem;
+	  }
+
+	  .today-highLight{
+		width: 100%;
+		height: 120px;	
 	  }
 
 }
