--- a/src/App.css
+++ b/src/App.css
@@ -58,18 +58,40 @@ body::-webkit-scrollbar {
 body {
 	line-height: 1;
 	font-family: 'Poppins', sans-serif;
-	background-color: #fff;
-	/* background-image: url('./images/animated-forest-park-s2siffpwqwzthugt.jfif'); */
+	/* background: linear-gradient(-45deg, #000000, #434343); */
+	/* background-size: 400% 400%;
+	animation: gradient 15s ease infinite; */
 	color: rgb(10, 10, 10);
 	margin: 1rem 0.5rem;
 }
+
+/* @keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+} */
 
 
 .nav {
     align-items: center;
     display: flex;
     position: relative;
-	padding-bottom: 1rem;
+    padding-bottom: 1rem;
+    justify-content: space-between;
+}
+
+.github-icon{
+	font-size: 1.6rem;
+}
+
+a{
+	color: black;
 }
 .nav-icon {
     position: absolute;
@@ -294,11 +316,13 @@ outline: none;
 		border-radius: 5px;
 }
 
-  .first-card-container{
-display: grid;
-	gap: 120px;
-
+.first-card-container {
+    display: grid;
+    gap: 98px;
+    margin: 2rem;
 }
+
+
 
 .img-container{
 	display: grid;
@@ -474,6 +498,9 @@ border-radius: 5px;
 }
 
 @media (min-width:500px) {
+	.first-card-container {
+		margin: 0rem;
+	}
 	.info-container{
 		/* margin: 1rem; */
 		display: grid;
@@ -487,6 +514,9 @@ border-radius: 5px;
 }
 
 @media (min-width:1024px) {
+
+	
+
 	.input {
 		max-width: 350px;
 	}
@@ -523,5 +553,11 @@ border-radius: 5px;
 		width: 100%;
 		height: 120px;	
 	  }
+
+	  .github-icon:hover{
+		cursor: pointer;
+		transform: scale(1.2);
+		transition: cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.5s;
+	}
 
 }
